--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.2",
-    "@mate-academy/scripts": "^0.2.0",
+    "@mate-academy/scripts": "^1.2.3",
     "@mate-academy/stylelint-config": "0.0.9",
+    "sass": "^1.23.7",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^9.0.1",
